--- a/book/src/app/book/book-listar/book-listar.component.html
+++ b/book/src/app/book/book-listar/book-listar.component.html
@@ -1,1 +1,10 @@
-<p>book-listar works!</p>
+<div class="container">
+  <div class="row p-5">
+      <div class="col" *ngFor="let b of books">
+          <figure class="figure">
+              <img class="img-fluid" src='{{b.image}}'/>
+              <figcaption class="title-caption text-center">{{b.name}}. [{{b.editorial.name}}]</figcaption>
+          </figure>
+      </div>
+  </div>
+</div>
