--- a/bookDetail/src/app/app.component.html
+++ b/bookDetail/src/app/app.component.html
@@ -1,1 +1,4 @@
 <app-book-listar></app-book-listar>
+<div *ngIf="selected">
+    <app-book-detail [bookDetail]="selectedBook"></app-book-detail>
+</div>
