Fix: details workshop

--- a/bookDetail/src/app/book/book-listar/book-listar.component.html
+++ b/bookDetail/src/app/book/book-listar/book-listar.component.html
@@ -6,5 +6,8 @@
             <figcaption class="title-caption text-center">{{b.name}}. [{{b.editorial.name}}]</figcaption>
           </figure>
       </div>
+      <div *ngIf="selected">
+        <app-book-detail [bookDetail]="selectedBook"></app-book-detail>
+    </div>
   </div>
 </div>
