--- a/bookDetail/src/app/book/book-listar/book-listar.component.html
+++ b/bookDetail/src/app/book/book-listar/book-listar.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row p-5">
-      <div class="col" *ngFor="let b of books">
-          <figure class="figure">
-            <img class="img-fluid" src='{{b.image}}' (click)="onSelected(b)" />
-            <figcaption class="title-caption text-center">{{b.name}}. [{{b.editorial.name}}]</figcaption>
-          </figure>
-      </div>
-      <div *ngIf="selected">
-        <app-book-detail [bookDetail]="selectedBook"></app-book-detail>
+    <div *ngFor="let b of books" class="col">
+      <figure class="figure">
+        <img (click)="onSelected(b)" class="img-fluid" src='{{b.image}}'/>
+        <figcaption class="title-caption text-center">{{b.name}}. [{{b.editorial.name}}]</figcaption>
+      </figure>
     </div>
   </div>
+</div>
+<div *ngIf="selected">
+  <app-book-detail [bookDetail]="selectedBook"></app-book-detail>
 </div>
